--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name">Covid-19 Companion</string>
-    <string name="title_home">Home</string>
+    <string name="title_podcast">Podcast</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_settings">Settings</string>
+    <string name="confirmed">Confirmed</string>
+    <string name="hand_hygiene_title"><![CDATA[Hand Hygiene: Why, How & When?]]></string>
+    <string name="cases_title">Updated information about Covid-19 near you.</string>
+    <string name="title_last_updated">"Last Updated: "</string>
+    <string name="confirmed_lower_case">confirmed</string>
+    <string name="recovered_lower_case">recovered</string>
+    <string name="deaths_lower_case">deaths</string>
 </resources>
