--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="confirmed_lower_case">confirmed</string>
     <string name="recovered_lower_case">recovered</string>
     <string name="deaths_lower_case">deaths</string>
+    <string name="recovered">Recovered</string>
+    <string name="deaths">Deaths</string>
 </resources>
