--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="deaths_lower_case">deaths</string>
     <string name="recovered">Recovered</string>
     <string name="deaths">Deaths</string>
+    <string name="cases_placeholder">%d </string>
+    <string name="cases_plus_new_placeholder">%d + %d </string>
 </resources>
