--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="recovered">Recovered</string>
     <string name="deaths">Deaths</string>
     <string name="cases_placeholder">%d </string>
-    <string name="cases_plus_new_placeholder">%d + %d </string>
+    <string name="new_cases_placeholder">%s NEW</string>
 </resources>
