--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="prevention_summary3">Washing your hands with soap and water or using alcohol-based
             hand rub kills viruses that may  be on your hands.
     </string>
+    <string name="nigeria">Nigeria</string>
+    <string name="cases">Cases</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
