--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,9 +25,12 @@
     </string>
     <string name="nigeria">Nigeria</string>
     <string name="cases">Cases</string>
-
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="settings">Settings</string>
+    <string name="rem_hand_loc">Remind me to wash my hands at certain locations</string>
+    <string name="rem_hand_time">Remind me to wash my hands every 30 minutes</string>
+    <string name="rem_water">Remind me to drink water every 1 hour</string>
+    <string name="podcast">Notify me of new episodes on Podcast</string>
+    <string name="notification">Use CoVID-19 custom notification tone</string>
+    <string name="about">About CoVID-19 Companion</string>
 
 </resources>
