--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="how_to_fight_corona_virus">How to fight Corona Virus</string>
     <string name="why">Why?</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="start_screening">START SCREENING</string>
 
 </resources>
