--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,8 @@
     <string name="instruction_group_multiple">Select all that apply:</string>
     <string name="back">Back</string>
     <string name="loading">Loading</string>
+    <string name="observations">Observations</string>
+    <string name="explanation_serious">Observations with this icon are alarming and require consultation with a medical professional.</string>
+    <string name="explanation_is_emergency">Observations with this icon are particularly urgent and may require immediate attention.</string>
 
 </resources>
