--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     </string>
     <string name="nigeria">Nigeria</string>
     <string name="cases">Cases</string>
+    <string name="cases_upper_case">CASES</string>
     <string name="settings">Settings</string>
     <string name="rem_hand_loc">Remind me to wash my hands at certain locations</string>
     <string name="rem_hand_time">Remind me to wash my hands every 30 minutes</string>
@@ -75,5 +76,18 @@
     <string name="error_get_diagnosis">An error occurred while getting your Diagnosis. Please try again.</string>
     <string name="try_again">Try again</string>
     <string name="no_observations">No Observations</string>
+    <string name="new_cases_today">New cases Today</string>
+    <string name="new_cases_today_value">10,000</string>
+    <string name="new_deaths_today">New deaths Today</string>
+    <string name="new_deaths_today_value">10,000</string>
+    <string name="cases_per_million">Cases per million</string>
+    <string name="cases_per_million_value">10,000</string>
+    <string name="deaths_per_million">Deaths per Million</string>
+    <string name="deaths_per_million_value">10,000</string>
+    <string name="state">STATE</string>
+    <string name="total_cases">Total Cases</string>
+    <string name="total_cases_value">10,000</string>
+    <string name="total_recovered">Total Recovered</string>
+    <string name="total_deaths">Total Deaths</string>
 
 </resources>
