Fetching and displaying regional data for nigeria

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,5 +102,8 @@
     <string name="total_cases_value">10,000</string>
     <string name="total_recovered">Total Recovered</string>
     <string name="total_deaths">Total Deaths</string>
+    <string name="unknown">Unknown</string>
+    <string name="error_update_regional_cases_data">Could not update Regional Cases Data. Please try again.</string>
+    <string name="error_update_cases_data">Could not update Cases Data. Please try again.</string>
 
 </resources>
