--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,5 +120,7 @@
     <string name="unknown">Unknown</string>
     <string name="error_update_regional_cases_data">Could not update Regional Cases Data. Please try again.</string>
     <string name="error_update_cases_data">Could not update Cases Data. Please try again.</string>
+    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien, pharetra, vitae eu, amet, pulvinar scelerisque et neque. At tellus, in faucibus auctor. Viverra ligula arcu, consequat scelerisque feugiat non. Et viverra massa nisi, tellus.</string>
+    <string name="lorem_ipsum_quote">You are this because you are that. Only if you believe otherwise will you stay where you are. Start doing what you want to today and you will get where you are going</string>
 
 </resources>
