--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,5 +120,6 @@
     <string name="unknown">Unknown</string>
     <string name="error_update_regional_cases_data">Could not update Regional Cases Data. Please try again.</string>
     <string name="error_update_cases_data">Could not update Cases Data. Please try again.</string>
+    <string name="set_username">Set Username</string>
 
 </resources>
