--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,5 +136,6 @@
     <string name="enter_username">Enter Username</string>
     <string name="survivor">Survivor</string>
     <string name="change_country">Change Country</string>
+    <string name="title_daily_motivation">DAILY MOTIVATION</string>
 
 </resources>
