--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="sort_by_confirmed">Sort by Confirmed</string>
     <string name="sort_by_recovered">Sort by Recovered</string>
     <string name="sort_by_death">Sort by Death</string>
-    <string name="title_notification">Hey there Survivor,</string>
+    <string name="placeholder_title_notification">Hey there %s,</string>
     <string name="text_wash_hands_reminder">You should go wash your hands now!!!</string>
     <string name="text_drink_water_reminder">You should go drink water now!!!</string>
     <string name="channel_desc_reminders_default_tone">A channel for reminders to wash your hands and drink water using your default Notification Tone</string>
@@ -124,8 +124,8 @@
     <string name="error_update_cases_data">Could not update Cases Data. Please try again.</string>
     <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien, pharetra, vitae eu, amet, pulvinar scelerisque et neque. At tellus, in faucibus auctor. Viverra ligula arcu, consequat scelerisque feugiat non. Et viverra massa nisi, tellus.</string>
     <string name="lorem_ipsum_quote">You are this because you are that. Only if you believe otherwise will you stay where you are. Start doing what you want to today and you will get where you are going</string>
-    <string name="title_motivation_notification">Hang in there Survivor,</string>
-    <string name="title_app_update_notification">Good News Survivor,</string>
+    <string name="placeholder_title_motivation_notification">Hang in there %s,</string>
+    <string name="placeholder_title_app_update_notification">Good News %s,</string>
     <string name="message_app_update_notification">An Update is available. Click here to download it.</string>
     <string name="placeholder_app_version_file_name">Covid-19 Companion_v%s.apk</string>
     <string name="update_app">Update App</string>
@@ -139,5 +139,6 @@
     <string name="title_daily_motivation">DAILY MOTIVATION</string>
     <string name="instructions_long_press_splashscreen">Press and hold anywhere to pin the Splashscreen</string>
     <string name="instructions_tap_splashscreen">"Tap anywhere to dismiss the Splashscreen"</string>
+    <string name="placeholder_hello_user">Hello %s</string>
 
 </resources>
