--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,8 +83,8 @@
     <string name="sort_by_recovered">Sort by Recovered</string>
     <string name="sort_by_death">Sort by Death</string>
     <string name="placeholder_title_notification">Hey there %s,</string>
-    <string name="text_wash_hands_reminder">You should go wash your hands now!!!</string>
-    <string name="text_drink_water_reminder">You should go drink water now!!!</string>
+    <string name="text_wash_hands_reminder">Stay safe, it’s time to wash your hands.</string>
+    <string name="text_drink_water_reminder">Stay healthy and hydrated, it’s time to drink water.</string>
     <string name="channel_desc_reminders_default_tone">A channel for reminders to wash your hands and drink water using your default Notification Tone</string>
     <string name="channel_desc_reminders_custom_tone">A channel for reminders to wash your hands and drink water using custom Notification Tone</string>
     <string name="channel_desc_default">A channel for Normal notifications</string>
@@ -105,7 +105,7 @@
     <string name="enter_address">Enter Address</string>
     <string name="enter_location">Enter Location</string>
     <string name="location_details">Location Details</string>
-    <string name="placeholder_location_wash_hands_reminder">Have you washed your Hands since you arrived at %s</string>
+    <string name="placeholder_location_wash_hands_reminder">Have you washed your Hands since you arrived at %s? Stay Safe.</string>
     <string name="new_cases_today">New cases Today</string>
     <string name="new_cases_today_value">10,000</string>
     <string name="new_deaths_today">New deaths Today</string>
