--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
     <string name="female">Female</string>
     <string name="question_age">Your Age?</string>
     <string name="instruction_group_single">Select one that applies:</string>
-    <string name="instruction_group_multiple">Select all that apply or none if they don\'t apply:</string>
+    <string name="instruction_group_multiple">Select the conditions that apply to you or none if they don\'t apply:</string>
     <string name="back">Back</string>
     <string name="loading">Loading</string>
     <string name="observations">Observations</string>
